menu bar text overflow fixed

--- a/Exercise4/playlist.scss
+++ b/Exercise4/playlist.scss
@@ -60,6 +60,10 @@ body {
   margin-top:1.5vmin;
   font-size: 3.5vmin;
   color: darkgray;
+  width: 33.33vw;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .glyphicon-music, .glyphicon-th-list, .glyphicon-search{
